"Add JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links"

--- a/assets/css/templates.css
+++ b/assets/css/templates.css
@@ -52,6 +52,7 @@ color: rgb(7, 114, 149);
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
     color: rgb(15, 4, 57);
     margin-top: 60px;
+    margin-bottom: 20px;
   }
 
   input[type="text"] {
@@ -191,7 +192,7 @@ form {
     font-family: "DM Serif-Display", serif;
     text-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
     color: rgb(15, 4, 57);
-    margin-top: 60px;
+    margin-top: 40px;
   }}
 
  
